
cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(u_dir)
add_subdirectory(u_encode)
add_subdirectory(u_file)
add_subdirectory(u_log)
add_subdirectory(u_path)
add_subdirectory(u_string)
add_subdirectory(u_threadpool)
add_subdirectory(test)




